--- a/quanlykytuc/quanlykytuc/Areas/Admin/Views/RoomCost/Index.cshtml
+++ b/quanlykytuc/quanlykytuc/Areas/Admin/Views/RoomCost/Index.cshtml
@@ -1,1 +1,168 @@
-﻿
+﻿@using quanlykytuc.Models;
+@model IList<RoomCostPrice>
+
+@{
+    Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
+}
+<main id="main" class="main">
+    <div class="col-xl">
+        <h4 class="fw-bold py-3 mb-4"><span class="text-muted fw-light">Quản lý /</span> Chi phí</h4>
+        <!-- Bordered Table -->
+        <div class="card">
+            <div class="card-header d-flex justify-content-between align-items-center">
+                <h5 class="mb-0">Danh sách chi phí</h5>
+                <a asp-area="Admin" asp-controller="RoomCost" asp-action="Create">
+                    <button type="button" class="btn btn-primary">
+                        <span class="tf-icons bx bx-pie-chart-alt"></span>
+                        Thêm mới
+                    </button>
+                </a>
+            </div>
+            <div class="card-body">
+                <div class="table-responsive text-nowrap">
+                    <table class="table table-borderless datatable">
+                        <thead>
+                            <tr>
+                                <th class="col-1 text-center">STT</th>
+                                <th class="col-1 text-center">Tên phòng</th>
+                                <th class="col-1 text-center">Chi phí (tháng)</th>
+                                <th class="col-1 text-center">Năm</th>
+                                <th class="col-1 text-center">Giá phòng</th>
+                                <th class="col-1 text-center">Tiền điện</th>
+                                <th class="col-1 text-center">Tiền nước</th>
+                                <th class="col-1 text-center">Chi phí khác</th>
+                                <th class="col-1 text-center">Tổng</th>
+                                <th class="col-1 text-center">Chức năng</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @{
+                                var counter = 1; // Biến đếm bắt đầu từ 1
+                                int currentPage = ViewBag.CurrentPage;
+                                int pageSize = 3;
+                                int startIndex = (currentPage - 1) * pageSize;
+                            }
+                            @foreach (var item in Model)
+                            {
+                                int i = ++startIndex;
+                                <tr id="cost_@i">
+                                    <td class="text-center"><span class="badge bg-primary">@counter</span></td>
+                                    <td class="text-center">
+                                        @item.Room.RoomName
+                                    </td>
+                                    <td class="text-center">
+                                        @item.Month
+                                    </td>
+                                    <td class="text-center">
+                                        @item.Year
+                                    </td>
+                                    <td class="text-center">
+                                        @item.RoomCost
+                                    </td>
+                                    <td class="text-center">
+                                        @item.ElectricityCost
+                                    </td>
+                                    <td class="text-center">
+                                        @item.WaterCost
+                                    </td>
+                                    <td class="text-center">
+                                        @item.OtherCost
+                                    </td>
+                                    <td class="text-center">
+                                        @item.TotalCost
+                                    </td>
+                                   
+
+                                    <td class="text-center">
+                                        <a asp-area="Admin" asp-controller="RoomCost" asp-action="Edit"
+                                           asp-route-id="@item.RoomCostID" class="btn btn-primary btn-sm"
+                                           title="Sửa nội dung menu"><i class="bi bi-pencil"></i></a>
+                                        <a href="" data-id="@item.RoomCostID" class="btn btn-danger btnDelete"
+                                           title="Xóa thông tin chi phí"><i class="bi bi-trash"></i></a>
+                                    </td>
+                                </tr>
+                                counter++;
+                            }
+
+                        </tbody>
+                    </table>
+                </div>
+                <div class="demo-inline-spacing">
+                    <nav aria-label="Page navigation" style="">
+                        <ul class="pagination justify-content-center">
+
+                            <li class="page-item @(ViewBag.CurrentPage == 1 ? "disabled" : "")">
+                                <a class="page-link" href="@Url.Action("Index", new { page = 1 })">
+                                    <i class="tf-icon bx bx-chevrons-left"></i>
+                                </a>
+                            </li>
+                            <li class="page-item @(ViewBag.CurrentPage == 1 ? "disabled" : "")">
+                                <a class="page-link" href="@Url.Action("Index", new { page = ViewBag.CurrentPage - 1 })">
+                                    <i class="tf-icon bx bx-chevron-left"></i>
+                                </a>
+                            </li>
+
+
+                            @for (int pageIndex = 1; pageIndex <= ViewBag.TotalPages; pageIndex++)
+                            {
+                                <li class="page-item @(ViewBag.CurrentPage == pageIndex ? "active" : "")">
+                                    <a class="page-link" href="/Admin/RoomCost/Index?page=@pageIndex">@pageIndex</a>
+                                </li>
+                            }
+
+
+                            <li class="page-item @(ViewBag.CurrentPage == ViewBag.TotalPages ? "disabled" : "")">
+                                <a class="page-link" href="@Url.Action("Index", new { page = ViewBag.CurrentPage + 1 })">
+                                    <i class="tf-icon bx bx-chevron-right"></i>
+                                </a>
+                            </li>
+
+
+                            <li class="page-item @(ViewBag.CurrentPage == ViewBag.TotalPages ? "disabled" : "")">
+                                <a class="page-link" href="@Url.Action("Index", new { page = ViewBag.TotalPages })">
+                                    <i class="tf-icon bx bx-chevrons-right"></i>
+                                </a>
+                            </li>
+                        </ul>
+                    </nav>
+                    <!--/ Basic Pagination -->
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--/ Bordered Table -->
+    </div>
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            // Attach a click event to elements with the class "btnDelete"
+            $('body').on('click', '.btnDelete', function () {
+                // Prevent the default behavior of the anchor
+                var id = $(this).data("id");
+                var conf = confirm("Bạn có muốn xóa bản ghi này ?");
+                if (conf === true) {
+
+                    // Make an AJAX request to your server to delete the record
+                    $.ajax({
+
+                        url: '/admin/RoomCost/Delete', // Replace with your actual URL
+                        type: 'POST', // Use POST or DELETE based on your server-side implementation
+                        data: { id: id },
+                        success: function (rs) {
+                            if (rs.success) {
+                                $('#cost_' + id).remove();
+                            }
+                        }
+
+                    });
+                }
+            });
+        });
+    </script>
+    <form>
+        @Html.AntiForgeryToken()
+    </form>
+</main>
+
+
+
