--- a/quanlykytuc/quanlykytuc/Areas/Admin/Views/Notification/Index.cshtml
+++ b/quanlykytuc/quanlykytuc/Areas/Admin/Views/Notification/Index.cshtml
@@ -35,6 +35,9 @@
                         <tbody>
                             @{
                                 var counter = 1; // Biến đếm bắt đầu từ 1
+                                int currentPage = ViewBag.CurrentPage;
+                                int pageSize = 3;
+                                int startIndex = (currentPage - 1) * pageSize;
                             }
                             @foreach (var item in Model)
                             {
