--- a/quanlykytuc/quanlykytuc/Views/Infor/Student.cshtml
+++ b/quanlykytuc/quanlykytuc/Views/Infor/Student.cshtml
@@ -5,6 +5,7 @@
 }
 <div class="content-wrapper">
     <div class="container-xxl flex-grow-1 container-p-y">
+        <h4 class="fw-bold py-3 mb-4"><span class="text-muted fw-light">Thông tin /</span> Sinh viên</h4>
         <div class="card mb-4">
             <h5 class="card-header">Thông tin sinh viên</h5>
             <!-- Account -->
