--- a/quanlykytuc/quanlykytuc/Views/Room/Index.cshtml
+++ b/quanlykytuc/quanlykytuc/Views/Room/Index.cshtml
@@ -6,102 +6,69 @@
 
 <div class="content-wrapper">
     <div class="container-xxl flex-grow-1 container-p-y">
-        <div class="card mb-4">
-            <h5 class="card-header">Thông tin phòng </h5>
-            <hr class="my-0">
+        <!-- Room Information Card -->
+        <div class="card mb-4 shadow-sm">
+            <h5 class="card-header text-white bg-info">Thông tin phòng</h5>
             <div class="card-body">
-                <form id="formAccountSettings" method="POST" onsubmit="return false">
+                <form id="formRoomDetails" method="POST" onsubmit="return false">
                     <div class="row">
                         <div class="mb-3 col-md-6">
-                            <label for="firstName" class="form-label">Tên phòng </label>
-                            <input class="form-control" type="text" id="firstName" name="firstName" value="@Model.Room.RoomName" readonly>
+                            <label for="roomName" class="form-label">Tên phòng</label>
+                            <input class="form-control" type="text" id="roomName" name="roomName" value="@Model.Room.RoomName" readonly>
                         </div>
                         <div class="mb-3 col-md-6">
-                            <label for="lastName" class="form-label">Số người ở</label>
-                            <input class="form-control" type="text" name="lastName" id="lastName" value="@Model.Room.Quantity" readonly>
+                            <label for="quantity" class="form-label">Số người ở</label>
+                            <input class="form-control" type="text" name="quantity" id="quantity" value="@Model.Room.Quantity" readonly>
                         </div>
                         <div class="mb-3 col-md-6">
-                            <label for="email" class="form-label">Số người tối đa</label>
-                            <input class="form-control" type="text" id="email" name="email" value="@Model.Room.Max" readonly>
+                            <label for="maxPeople" class="form-label">Số người tối đa</label>
+                            <input class="form-control" type="text" id="maxPeople" name="maxPeople" value="@Model.Room.Max" readonly>
                         </div>
                         <div class="mb-3 col-md-6">
-                            <label for="organization" class="form-label">Khu vực</label>
-                            <input type="text" class="form-control" id="organization" name="organization" value="Tòa A" readonly>
+                            <label for="area" class="form-label">Khu vực</label>
+                            <input type="text" class="form-control" id="area" name="area" value="Tòa A" readonly>
                         </div>
                         <div class="mb-3 col-md-6">
-                            <label for="state" class="form-label">Tầng</label>
-                            <input class="form-control" type="text" id="state" name="state" value="1" readonly>
+                            <label for="floor" class="form-label">Tầng</label>
+                            <input class="form-control" type="text" id="floor" name="floor" value="1" readonly>
                         </div>
                     </div>
-
                 </form>
             </div>
-            <div class="card">
-                <h5 class="card-header">Số sinh viên ở trong phòng</h5>
-                <div class="card-body">
-                    <div class="table-responsive text-nowrap">
+        </div>
 
-                        <table class="table table-bordered">
-                            <thead>
+        <!-- Student Information Card -->
+        <div class="card shadow-sm">
+            <h5 class="card-header bg-primary text-white">Số sinh viên ở trong phòng</h5>
+            <div class="card-body">
+                <div class="table-responsive text-nowrap">
+                    <table class="table table-bordered table-hover table-striped">
+                        <thead class="table-dark">
+                            <tr>
+                                <th class="col-1 text-center">STT</th>
+                                <th class="col-3 text-center">Họ tên</th>
+                                <th class="col-2 text-center">Ngày sinh</th>
+                                <th class="col-3 text-center">Số điện thoại</th>
+                                <th class="col-3 text-center">Địa chỉ</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @foreach (var item in Model.Students)
+                            {
                                 <tr>
-                                    <th class="col-1 text-center">STT</th>
-                                    <th class="col-1 text-center">Họ tên</th>
-                                    <th class="col-1 text-center">Ngày sinh</th>
-                                    <th class="col-2 text-center">Số điện thoại</th>
-                                    <th class="col-1 text-center">Địa chỉ</th>
+                                    <td class="text-center">
+                                        @item.StudentID
+                                    </td>
+                                    <td class="text-center">@item.Name</td>
+                                    <td class="text-center">@item.Birth</td>
+                                    <td class="text-center">@item.Phone</td>
+                                    <td class="text-center">@item.Address</td>
                                 </tr>
-                            </thead>
-                            <tbody>
-                                @foreach (var item in Model.Students)
-                                {
-                                    <tr>
-                                    
-                                        <td class="text-center">
-                                            @item.StudentID
-                                        </td>
-                                        <td class="text-center">@item.Name</td>
-                                        <td class="text-center">@item.Birth</td>
-                                        <td class="text-center">@item.Phone</td>
-                                        <td class="text-center">@item.Address</td>
-                                        @* <td>
-                                    <i class="fab fa-angular fa-lg text-danger me-3"></i> <strong>Angular Project</strong>
-                                    </td>
-                                    <td>Albert Cook</td>
-                                    <td>
-                                    <ul class="list-unstyled users-list m-0 avatar-group d-flex align-items-center">
-                                    <li data-bs-toggle="tooltip" data-popup="tooltip-custom" data-bs-placement="top" class="avatar avatar-xs pull-up" title="" data-bs-original-title="Lilian Fuller">
-                                    <img src="../assets/img/avatars/5.png" alt="Avatar" class="rounded-circle">
-                                    </li>
-                                    <li data-bs-toggle="tooltip" data-popup="tooltip-custom" data-bs-placement="top" class="avatar avatar-xs pull-up" title="" data-bs-original-title="Sophia Wilkerson">
-                                    <img src="../assets/img/avatars/6.png" alt="Avatar" class="rounded-circle">
-                                    </li>
-                                    <li data-bs-toggle="tooltip" data-popup="tooltip-custom" data-bs-placement="top" class="avatar avatar-xs pull-up" title="" data-bs-original-title="Christina Parker">
-                                    <img src="../assets/img/avatars/7.png" alt="Avatar" class="rounded-circle">
-                                    </li>
-                                    </ul>
-                                    </td>
-                                    <td><span class="badge bg-label-primary me-1">Active</span></td>
-                                    <td>
-                                    <div class="dropdown">
-                                    <button type="button" class="btn p-0 dropdown-toggle hide-arrow" data-bs-toggle="dropdown">
-                                    <i class="bx bx-dots-vertical-rounded"></i>
-                                    </button>
-                                    <div class="dropdown-menu">
-                                    <a class="dropdown-item" href="javascript:void(0);"><i class="bx bx-edit-alt me-1"></i> Edit</a>
-                                    <a class="dropdown-item" href="javascript:void(0);"><i class="bx bx-trash me-1"></i> Delete</a>
-                                    </div>
-                                    </div>
-                                    </td> *@
-                             
-
-                                    </tr>
-                                }
-                            </tbody>
-                        </table>
-                    </div>
+                            }
+                        </tbody>
+                    </table>
                 </div>
             </div>
         </div>
     </div>
 </div>
-
