Đã thêm đăng ký phòng cho sinh viên và duyệt đăng ký phòng cho admin

--- a/quanlykytuc/quanlykytuc/Views/User/Login.cshtml
+++ b/quanlykytuc/quanlykytuc/Views/User/Login.cshtml
@@ -131,7 +131,7 @@
                             <div class="mb-3 form-password-toggle">
                                 <label class="form-label" asp-for="@Model.Passwords">Mật Khẩu</label>
                                 <div class="input-group input-group-merge">
-                                    <input type="password" asp-for="@Model.Passwords" class="form-control" placeholder="············" aria-describedby="Nhập mật khẩu">
+                                    <input type="password" asp-for="@Model.Passwords" class="form-control" placeholder="············">
                                     <span asp-validation-for="@Model.Passwords" class="text-danger"></span>
                                 </div>
                             </div>
