--- a/quanlykytuc/quanlykytuc/Areas/Admin/Views/RoomRegistration/ApproveRoom.cshtml
+++ b/quanlykytuc/quanlykytuc/Areas/Admin/Views/RoomRegistration/ApproveRoom.cshtml
@@ -16,18 +16,27 @@
                     <table class="table table-striped table-hover">
                         <thead class="table-primary">
                             <tr>
+                                <th>STT</th>
                                 <th>Tên sinh viên</th>
                                 <th>Tên phòng</th>
-                                <th>Ngày đăng ký</th>
+                                <th>Số điện thoại</th>
+                                <th>Email</th>
+                                <th>Ngày đăng ký</th>                                
                                 <th class="text-center">Chức năng</th>
                             </tr>
                         </thead>
                         <tbody id="registrationList">
+                            @{
+                                var counter = 1;
+                            }
                             @foreach (var registration in Model)
                             {
                                 <tr id="row-@registration.RegistrationID">
+                                    <td>@counter</td>
                                     <td>@registration.Student.Name</td>
                                     <td>@registration.Room.RoomName</td>
+                                    <td>@registration.Phone</td>
+                                    <td>@registration.Email</td>
                                     <td>@registration.RegistrationDate.ToString("dd/MM/yyyy")</td>
                                     <td class="text-center">
                                         <button class="btn btn-success btn-sm me-2" onclick="approveRoom(@registration.RegistrationID)">
@@ -38,6 +47,7 @@
                                         </button>
                                     </td>
                                 </tr>
+                                counter++;
                             }
                         </tbody>
                     </table>
