--- a/quanlykytuc/quanlykytuc/Areas/Admin/Views/Room/Index.cshtml
+++ b/quanlykytuc/quanlykytuc/Areas/Admin/Views/Room/Index.cshtml
@@ -38,7 +38,7 @@
 							}
 							@foreach (var item in Model)
 							{
-								<tr>
+								<tr class="text-center">
 									<td class="text-center" scope="row">@count</td>
 
 									<td class="text-center">
