--- a/quanlykytuc/quanlykytuc/Views/RoomRegistration/RegisterRoom.cshtml
+++ b/quanlykytuc/quanlykytuc/Views/RoomRegistration/RegisterRoom.cshtml
@@ -37,7 +37,7 @@
                             @foreach (var room in ViewBag.Rooms)
                             {
                                 <option value="@room.RoomID">
-                                    @room.RoomName (Số lượng người tối đa: @room.Max)
+                                    @room.RoomName (Số lượng @room.Quantity / @room.Max)
                                 </option>
                             }
                             
