--- a/quanlykytuc/quanlykytuc/Views/User/Register.cshtml
+++ b/quanlykytuc/quanlykytuc/Views/User/Register.cshtml
@@ -181,9 +181,9 @@
                         </form>
 
                         <p class="text-center">
-                            <span>Bạn đã có tài khoản rồi</span>
-                            <a href="Login/User">
-                                <span>Sign in instead</span>
+                            <span>Bạn đã có tài khoản rồi?</span>
+                            <a asp-controller="User" asp-action="Register">
+                                <span>Đăng nhập</span>
                             </a>
                         </p>
                     </div>
