--- a/quanlykytuc/quanlykytuc/Views/User/Login.cshtml
+++ b/quanlykytuc/quanlykytuc/Views/User/Login.cshtml
@@ -36,7 +36,7 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" />
 
-    <title>Login Basic - Pages | Sneat - Bootstrap 5 HTML Admin Template - Pro</title>
+    <title>Login  - Pages</title>
 
     <meta name="description" content="" />
 
@@ -131,10 +131,6 @@
                                 <input type="text" class="form-control" asp-for="@Model.UserName" placeholder="Nhập tài khoản" autofocus="">
                                 <span asp-validation-for="@Model.UserName" class="text-danger"></span>
                             </div>
-                            @* <div class="mb-3">
-                                <label for="email" class="form-label">Email</label>
-                                <input type="text" class="form-control" id="email" name="email" placeholder="Nhập email">
-                            </div> *@
 
                             <div class="mb-3 form-password-toggle">
                                 <label class="form-label" asp-for="@Model.Passwords">Mật Khẩu</label>
