--- a/quanlykytuc/quanlykytuc/Views/User/Register.cshtml
+++ b/quanlykytuc/quanlykytuc/Views/User/Register.cshtml
@@ -169,7 +169,7 @@
 
                         <p class="text-center">
                             <span>Bạn đã có tài khoản rồi?</span>
-                            <a asp-controller="User" asp-action="Register">
+                            <a asp-controller="User" asp-action="Login">
                                 <span>Đăng nhập</span>
                             </a>
                         </p>
