--- a/quanlykytuc/quanlykytuc/Areas/Admin/Views/Home/Index.cshtml
+++ b/quanlykytuc/quanlykytuc/Areas/Admin/Views/Home/Index.cshtml
@@ -29,9 +29,7 @@
                                         <i class="bi bi-cart"></i>
                                     </div>
                                     <div class="ps-3">
-                                        <h6>145</h6>
-                                      
-
+                                        <h6>4</h6>
                                     </div>
                                 </div>
                             </div>
@@ -51,7 +49,7 @@
                                         <i class="bi bi-currency-dollar"></i>
                                     </div>
                                     <div class="ps-3">
-                                        <h6>$3,264</h6>
+                                        <h6>10</h6>
                                        
                                     </div>
                                 </div>
@@ -66,14 +64,14 @@
 
                             
                             <div class="card-body">
-                                <h5 class="card-title">Customers <span>| This Year</span></h5>
+                                <h5 class="card-title">Số phòng đã thanh toán </h5>
 
                                 <div class="d-flex align-items-center">
                                     <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
                                         <i class="bi bi-people"></i>
                                     </div>
                                     <div class="ps-3">
-                                        <h6>1244</h6>
+                                        <h6>1</h6>
                                         <span class="text-danger small pt-1 fw-bold">12%</span> <span class="text-muted small pt-2 ps-1">decrease</span>
 
                                     </div>
