--- a/quanlykytuc/quanlykytuc/Views/Infor/Student.cshtml
+++ b/quanlykytuc/quanlykytuc/Views/Infor/Student.cshtml
@@ -41,7 +41,7 @@
                         </div>
                         <div class="mb-3 col-md-6">
                             <label for="email" class="form-label">E-mail</label>
-                            <input class="form-control" type="text" id="email" name="email" value="phamminhkhanh@example.com" readonly>
+                            <input class="form-control" type="text" id="email" name="email" value="@Model.Student.Email" readonly>
                         </div>
                         <div class="mb-3 col-md-6">
                             <label for="organization" class="form-label">Địa chỉ</label>
@@ -50,7 +50,7 @@
                         <div class="mb-3 col-md-6">
                             <label class="form-label" for="phoneNumber">Số điện thoại</label>
                             <div class="input-group input-group-merge">
-                                <span class="input-group-text">Us(+64)</span>
+                                <span class="input-group-text">VN(+84)</span>
                                 <input type="text" id="phoneNumber" name="phoneNumber" class="form-control" value="@Model.Student.Phone" readonly>
                             </div>
                         </div>
